fixed posts growing too big in feed

--- a/client/src/Components/Profile/PostsList.module.css
+++ b/client/src/Components/Profile/PostsList.module.css
@@ -12,7 +12,9 @@
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 15px;
-  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+  max-height: 100%;
   margin-bottom: 16px;
 }
 
@@ -53,6 +55,10 @@
   width: 100%;
   height: 100%;
   overflow-y: auto;
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .react_buttons_div {
   display: flex;
